fixed scrollbar bug

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -31,6 +31,7 @@ body {
     
 }
 
-.yscroll{
+.scroll{
     overflow-y:scroll;
+    overflow-x:scroll;
 }
